# data-game

./: .gitignore  README.md  app.py  bdd_v1.lo1  bdd_v1.loo  explo_api2.ipynb  gamestop_api.ipynb  iconstemps.html  main.py  models.py  pyproject.toml  recommendation.py  requirements.txt  requirements_python_app.txt  traductionpays.py
BDD/: creation_bdd.sql  import company.py  import company_logo.py  import multiplayer_mode  import platform_platform_version.py  import platform_version.py  import_age_ratings.py  import_company.py  import_company_company_statuses.py  import_company_developed.py  import_company_game_engines.py  import_company_logo.py  import_company_logos.py  import_company_published.py  import_company_status.py  import_game_age_ratings.py  import_game_game_engines.py  import_game_game_type.py  import_game_genre.py  import_game_multiplayer_mode  import_game_platform.py  import_game_player_perspective.py  import_game_video.py  import_games.py  import_genres  import_genres.py  import_language.py  import_language_supports.py  import_platform.py  import_platform_multiplayer_mode.py  import_platform_platform_version.py  import_platform_version.py
app/: app.py
csv/: game_engines.csv  gamespot_games.csv  jeux_video_rawg.csv  platforms.csv  player_perspectives.csv
data/: Machine_learning.ipynb  collect_rawg.ipynb  data_game_engines_pour_bdd  explo_api.ipynb  explo_api2.ipynb  explo_api3.ipynb  explo_api4.ipynb  fonctions_post_igdb.py  gamestop_api.py
templates/: base.html  console_detail.html  consoles.html  entreprises.html  entreprises_detail.html  (+7 more)
(+1 files in other folders)
